# notizia

./: .codecov.yml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  ROADMAP.md  SECURITY.md
notizia/: Cargo.toml  README.md
notizia/examples/: 01_basic_task.rs  02_bidirectional.rs  03_supervisor.rs  04_error_handling.rs  05_macro_vs_methods.rs  06_call_cast.rs  07_message_macro.rs  ping_pong.rs
notizia/src/: lib.rs  macros.rs  main.rs  prelude.rs
notizia/src/core/: errors.rs  lifecycle.rs  mailbox.rs  mod.rs  state.rs
notizia/src/task/: handle.rs  mod.rs  reference.rs  traits.rs
notizia/tests/: call_cast.rs  call_simple_syntax.rs  concurrent_messaging.rs  error_handling.rs  lifecycle.rs  macro_integration.rs  message_macro.rs  task_lifecycle.rs  task_ref.rs
notizia_gen/: Cargo.toml  README.md
notizia_gen/src/: lib.rs
notizia_gen/tests/: compile_fail.rs  expansion_tests.rs
notizia_gen/tests/compile_fail/: invalid_format.rs  invalid_format.stderr  invalid_meta_namevalue.rs  invalid_meta_namevalue.stderr  invalid_meta_path.rs  invalid_meta_path.stderr  invalid_task_syntax.rs  invalid_task_syntax.stderr  invalid_value_type.rs  invalid_value_type.stderr  missing_message_param.rs  missing_message_param.stderr  non_clone_message.rs  non_clone_message.stderr  request_missing_reply_param.rs  request_missing_reply_param.stderr  request_on_tuple_variant.rs  request_on_tuple_variant.stderr  request_wrong_param_name.rs  request_wrong_param_name.stderr
notizia_gen/tests/expand/: basic_task.expanded.rs  basic_task.rs  generic_message.expanded.rs  generic_message.rs  lifecycle_basic.expanded.rs  lifecycle_basic.rs  message_basic.rs  (+13 more)
(+16 files in other folders)
