[package]
name = "notizia"
version.workspace = true
edition = "2024"
authors.workspace = true
description.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[dependencies]
futures.workspace = true
notizia_gen.workspace = true
tokio.workspace = true
thiserror.workspace = true
