[package]
name = "notizia_gen"
version.workspace = true
edition = "2024"
authors.workspace = true
description = "Procedural macros for the Notizia message passing library"
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.43"
syn = { version = "2.0.114", features = ["full"] }
